TicketsGeneratorWayImpl3.java I realize final